--- a/assets/style.css
+++ b/assets/style.css
@@ -163,16 +163,23 @@ a {
 .clients .images {
   display: flex;
   justify-content: space-between;
-  margin-top: 7rem;
+  
   align-items: center;
 }
 
-.clients .images img:nth-child(3) {
-  box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.1);
-  padding: 3.2rem 4.2rem;
-  background-color: #ffffff;
+.clients .images a {
+  display: flex;
+  margin-top: 7rem;
+  align-items: center;
+  padding: 0 4.2rem;
+  height: 9rem;
   border-radius: 1.2rem;
 }
+
+.clients .images a:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
 
 /*------- Guides -------*/
 .guides {
