--- a/assets/style.css
+++ b/assets/style.css
@@ -54,17 +54,17 @@ a {
 /* header */
 .hero-wrap {
   background-color: #e6f0ff;
-  height: 100vh;
+  height: calc(100vh - 9rem);
   position: relative;
   display: flex;
 }
 
 .fixed-header {
-  width: 100vw;
   background-color: #e6f0ff;
+
   padding-top: 2.6rem;
   position: sticky;
-  top: -26px;
+  top: -2.6rem;
   z-index: 1;
 }
 
