--- a/assets/style.css
+++ b/assets/style.css
@@ -586,7 +586,7 @@ a {
 
 /*------- Footer -------*/
 .footer {
-  margin-top: 5.5rem;
+  margin-top: 0.5rem;
   padding: 5rem 0 5.8rem;
 }
 
@@ -656,4 +656,9 @@ a {
   background-color: #f9f9f9;
 }
 
-/* Login */
+
+.space {
+  height: 0.2rem;
+    background: #e9e9e9;
+    margin-top: 6.5rem;
+}
