--- a/assets/login.css
+++ b/assets/login.css
@@ -22,7 +22,9 @@
   display: flex;
   width: 800px;
   height: 500px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 20px;
 }
 
@@ -77,8 +79,7 @@
   font-size: 20px;
   line-height: 1.5;
   margin-top: 22px;
-  color:  #8EC5FC;
-
+  color: #8ec5fc;
 }
 
 .login .desc {
@@ -104,7 +105,7 @@
   opacity: 0.5;
 }
 
-input {
+form input {
   width: 100%;
   background: transparent;
   border: 0;
@@ -113,7 +114,8 @@ input {
 }
 
 form .lost {
-  font-size: 14px;
+  font-size: 0px;
+  transition: fontSize 2s;
 }
 
 form .btn-field {
@@ -140,4 +142,43 @@ form .btn-field {
   color: #8ec5fc;
 }
 
+/*check box */
+label {
+  display: block;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
 
+#check-box {
+  position: absolute;
+    transform: scale(0);
+    height: 20px;
+    width: 20px;
+}
+
+label input:checked ~ .checkbox {
+  transform: rotate(45deg);
+  width: 10px;
+  margin-top: -2px;
+  margin-left: 10px;
+  border-color: #24c78e;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-radius: 0;
+}
+
+label .checkbox {
+  display: block;
+  width: inherit;
+  height: inherit;
+  border: 3px solid #434343;
+  border-radius: 6px;
+  transition: all 0.375s;
+}
+
+.remember {
+  width: 116px;
+  font-size: 15px;
+  margin-left: 9px;
+}
