--- a/assets/style.css
+++ b/assets/style.css
@@ -630,6 +630,10 @@ a {
   margin-bottom: 1.8rem;
 }
 
+.footer .item:hover {
+  opacity: 0.5;
+}
+
 .footer .column p {
   font-weight: 400;
   font-size: 1.6rem;
