--- a/assets/villa.css
+++ b/assets/villa.css
@@ -224,14 +224,14 @@ header .user .back:hover {
 /* Info */
 
 .info {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
   margin-top: 50px;
   width: 100%;
 }
 
 .info .block-left {
-    width: 60%;
+  width: 60%;
 }
 
 h2 {
@@ -280,90 +280,90 @@ h2 {
 
 /* form */
 .info .block-right {
-    width: 35%;
+  width: 35%;
 }
 
 form {
-    position: sticky;
-    top: 20px;
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding: 20px;
-    justify-content: center;
-    box-shadow: rgb(0 0 0 / 16%) 0px 10px 36px 0px, rgb(0 0 0 / 6%) 0px 0px 0px 1px;
-    border-radius: 10px;
+  position: sticky;
+  top: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 20px;
+  justify-content: center;
+  box-shadow: rgb(0 0 0 / 16%) 0px 10px 36px 0px,
+    rgb(0 0 0 / 6%) 0px 0px 0px 1px;
+  border-radius: 10px;
 }
 
 form input[type="date"] {
-    height: 30px;
+  height: 30px;
 }
 
 form .btn-book {
-    text-align: center;
-    margin-top: 20px;
-    background-color: #0f1b4c;
-    color: #fff;
-    display: block;
-    padding: 15px;
-    border-radius: 6px;
+  text-align: center;
+  margin-top: 20px;
+  background-color: #0f1b4c;
+  color: #fff;
+  display: block;
+  padding: 15px;
+  border-radius: 6px;
 }
 
 form .btn-book:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 /* Footer */
 
 footer {
-    justify-content: space-between;
-    width: 98.9vw;
-    background-color: #fff;
-    bottom: 0;
-    padding: 8px 80px 9px 80px;
-  }
-  
-  footer .block-right .desc {
-    display: inline-block;
-    font-size: 14px;
-    line-height: 35px;
-    color: #000;
-  }
-  
-  footer .block-right .desc:not(:first-child):hover {
-    text-decoration: underline;
-  }
-  
-  footer .block-right .docs {
-    display: inline-block;
-    text-align: center;
-    width: 19px;
-    font-size: 14px;
-    line-height: 18px;
-  }
-  
-  footer .support {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  
-  footer .block-left {
-    display: flex;
-  }
-  
-  footer .block-left .item {
-    margin: 10px;
-  }
-  
-  footer .block-left .desc {
-    font-weight: 500;
-  }
-  
-  footer .block-left .desc:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  
-  
+  justify-content: space-between;
+  width: 98.9vw;
+  background-color: #fff;
+  bottom: 0;
+  padding: 8px 80px 9px 80px;
+}
+
+footer .block-right .desc {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 35px;
+  color: #000;
+}
+
+footer .block-right .desc:not(:first-child):hover {
+  text-decoration: underline;
+}
+
+footer .block-right .docs {
+  display: inline-block;
+  text-align: center;
+  width: 19px;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+footer .support {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .block-left {
+  display: flex;
+}
+
+footer .block-left .item {
+  margin: 10px;
+}
+
+footer .block-left .desc {
+  font-weight: 500;
+}
+
+footer .block-left .desc:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
