--- a/assets/style.css
+++ b/assets/style.css
@@ -98,11 +98,22 @@ a {
   line-height: 2.1rem;
   color: #4f5361;
   padding: 1.4rem;
+  position: relative;
 }
 
-.navbar ul a:hover {
-  background-color: #687690;
-  color: #ffffff;
+.navbar ul a:hover::after {
+  width: 100%;
+}
+
+.navbar ul a::after {
+  content: "";
+  height: 2px;
+  position: absolute;
+  width: 0;
+  background-color: #000;
+  bottom: 0;
+  left: 0;
+  transition: .5s;
 }
 
 .navbar .action-link {
@@ -660,10 +671,8 @@ a {
   background-color: #f9f9f9;
 }
 
-
 .space {
   height: 0.2rem;
-    background: #e9e9e9;
-    margin-top: 6.5rem;
+  background: #e9e9e9;
+  margin-top: 6.5rem;
 }
-
